Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.13, 5.14
-
Fix Version/s: None
-
Component/s: Quick: Mouse Touch and Tablet input
-
Platform/s:
Description
As can be seen on Grafana the test has become flaky.
A log where the test failed can be found here. This doesn't seem to be an issue on anything but the OpenSuse VM, and I also could never reproduce the issue locally.
For the record, excerpt from the log: agent:2019/08/07 14:06:56 build.go:215: FAIL! : tst_qquicktextedit::mouseSelection(on word selection (20,2)) Compared values are not the same agent:2019/08/07 14:06:56 build.go:215: Actual (((textEditObject->selectedText()))): "" agent:2019/08/07 14:06:56 build.go:215: Expected (selectedText) : "0123456789 ABCDEFGHIJKLMNOPQRSTUVWXYZ" agent:2019/08/07 14:06:56 build.go:215: Loc: [tst_qquicktextedit.cpp(2127)] Might be unrelated, but I also get this locally - consistently: FAIL! : tst_qquicktextedit::mouseSelection(on triple click (50,25)) Compared values are not the same Actual (((textEditObject->selectedText()))): "OPQRSTUVWXYZ\n9876543210\n\n" Expected (selectedText) : "0123456789 ABCDEFGHIJKLMNOPQRSTUVWXYZ\n9876543210\n\nZXYWVUTSRQPON MLKJIHGFEDCBA" tst_qquicktextedit.cpp(2127) : failure location
Attachments
Issue Links
- duplicates
-
QTBUG-78846 tst_qquickmousearea::mouseSelectionMode is flaky on OpenSuse 15
-
- Open
-
- relates to
-
QTBUG-50022 [REG 5.5->5.6] tst_qquicktextedit::mouseSelection failures
-
- Closed
-