Fix QQuickTextEdit triple click detection

It should use the events own timestamps instead of a QTimer. It should
give a more accurate measurement of tripleclicks, in addition to that
qtestlib synthesized events (with timestamps) are respected.

Task-number: QTBUG-77389
Change-Id: I4f553ec17b53a00b55519bb8082f1373aa9d130d
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>