src/quick/items/qquicktextcontrol.cpp
@@ -790,8 +790,6 @@ void QQuickTextControl::timerEvent(QTimerEvent *e)
         d->cursorOn = !d->cursorOn;
 
         d->repaintCursor();
-    } else if (e->timerId() == d->tripleClickTimer.timerId()) {
-        d->tripleClickTimer.stop();
     }
 }
 
@@ -1046,7 +1044,7 @@ void QQuickTextControlPrivate::mousePressEvent(QMouseEvent *e, const QPointF &po
     commitPreedit();
 #endif
 
-    if (tripleClickTimer.isActive()
+    if ((e->timestamp() < (timestampAtLastDoubleClick + QGuiApplication::styleHints()->mouseDoubleClickInterval()))
         && ((pos - tripleClickPoint).toPoint().manhattanLength() < QGuiApplication::styleHints()->startDragDistance())) {
 
         cursor.movePosition(QTextCursor::StartOfBlock);
@@ -1056,7 +1054,7 @@ void QQuickTextControlPrivate::mousePressEvent(QMouseEvent *e, const QPointF &po
 
         anchorOnMousePress = QString();
 
-        tripleClickTimer.stop();
+        timestampAtLastDoubleClick = 0; // do not enter this condition in case of 4(!) rapid clicks
     } else {
         int cursorPos = q->hitTest(pos, Qt::FuzzyHit);
         if (cursorPos == -1) {
@@ -1245,7 +1243,7 @@ void QQuickTextControlPrivate::mouseDoubleClickEvent(QMouseEvent *e, const QPoin
         selectedWordOnDoubleClick = cursor;
 
         tripleClickPoint = pos;
-        tripleClickTimer.start(QGuiApplication::styleHints()->mouseDoubleClickInterval(), q);
+        timestampAtLastDoubleClick = e->timestamp();
         if (doEmit) {
             selectionChanged();
 #if QT_CONFIG(clipboard)
