src/quick/items/qquicktextcontrol_p_p.h
@@ -141,7 +141,7 @@ public:
     QString hoveredLink;
 
     QBasicTimer cursorBlinkTimer;
-    QBasicTimer tripleClickTimer;
+    ulong timestampAtLastDoubleClick = 0;   // will only be set at a double click
 
 #if QT_CONFIG(im)
     int preeditCursor;
